# FlickrMetadataEmbedder

./: CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: blueprint.md  spec.md
src/: __init__.py  gps_converter.py  image_updater.py  logger.py  main.py  metadata_parser.py  sanity_checker.py
tests/: test_gps_converter.py  test_image_updater.py  test_logger.py  test_metadata_parser.py
